# lazy_rest

./: .env  .gitignore  Cargo.toml
.sqlx/: query-113478439d646da44b9d52d468de7fff4d44a76aa0b3306c49e2fd6c50864439.json  query-4a4b0562a7ff2148d6e2c110c7df4868e5b45e050439540c71bccb98df1ef842.json  query-5d79dc19b463e2819445a76bf3e8a9552efaba584b1bea16b7a14051163b0cf2.json
migrations/: 20231126191706_create_request_table.sql
src/: cli.rs  main.rs  models.rs  request_service.rs
