[package]
name = "lazy-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
termcolor = "1.4.1"
termcolor-json = "1.0.0"
tokio = { version = "1.34.0", features = ["full"]}
